--- a/LZCoder/Base.lproj/Main.storyboard
+++ b/LZCoder/Base.lproj/Main.storyboard
@@ -441,6 +441,10 @@
                                                             <constraint firstAttribute="width" constant="20" id="aS0-r7-Sq4"/>
                                                         </constraints>
                                                         <state key="normal" image="uncheckbox"/>
+                                                        <state key="selected" image="checkbox"/>
+                                                        <connections>
+                                                            <action selector="btnCheckClicked:" destination="EFl-sq-gdU" eventType="touchUpInside" id="ggn-rn-p7P"/>
+                                                        </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ICD-10 Code: S93.563" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dbt-M0-c5N">
                                                         <rect key="frame" x="35" y="20" width="240" height="24"/>
