--- a/LZCoder/Base.lproj/Main.storyboard
+++ b/LZCoder/Base.lproj/Main.storyboard
@@ -96,6 +96,9 @@
                                     <searchBar contentMode="redraw" placeholder="Search" translatesAutoresizingMaskIntoConstraints="NO" id="hyK-qp-fWH">
                                         <rect key="frame" x="0.0" y="47" width="375" height="56"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="HGx-Bn-dJX" id="RpX-wV-CHP"/>
+                                        </connections>
                                     </searchBar>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
