--- a/LZCoder/Base.lproj/Main.storyboard
+++ b/LZCoder/Base.lproj/Main.storyboard
@@ -372,7 +372,6 @@
                                             </button>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BwB-zV-nA4" customClass="LZFloatingLabelTextField" customModule="LZCoder" customModuleProvider="target">
                                                 <rect key="frame" x="47" y="240" width="281" height="30"/>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <userDefinedRuntimeAttributes>
@@ -405,7 +404,6 @@
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CV7-B5-i2G" customClass="LZFloatingLabelTextField" customModule="LZCoder" customModuleProvider="target">
                                                 <rect key="frame" x="47" y="285" width="281" height="30"/>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
                                                 <userDefinedRuntimeAttributes>
@@ -417,7 +415,6 @@
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qg9-bN-iM7" customClass="LZFloatingLabelTextField" customModule="LZCoder" customModuleProvider="target">
                                                 <rect key="frame" x="47" y="330" width="281" height="30"/>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                 <userDefinedRuntimeAttributes>
@@ -429,7 +426,6 @@
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ozA-kL-x3W" customClass="LZFloatingLabelTextField" customModule="LZCoder" customModuleProvider="target">
                                                 <rect key="frame" x="47" y="375" width="281" height="30"/>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                                                 <userDefinedRuntimeAttributes>
@@ -441,7 +437,6 @@
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AOP-Yb-3sm" customClass="LZFloatingLabelTextField" customModule="LZCoder" customModuleProvider="target">
                                                 <rect key="frame" x="47" y="420" width="281" height="30"/>
-                                                <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                                 <userDefinedRuntimeAttributes>
@@ -1036,7 +1031,7 @@
         <!--Cart-->
         <scene sceneID="EO5-f4-Tfq">
             <objects>
-                <viewController id="MoR-LW-hTK" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CartViewController" id="MoR-LW-hTK" customClass="CartViewController" customModule="LZCoder" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="CBP-SD-BoM">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -1045,13 +1040,13 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="64"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cart" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5p-pC-276">
-                                        <rect key="frame" x="159.5" y="15" width="56" height="34"/>
+                                        <rect key="frame" x="160" y="15" width="55.5" height="34"/>
                                         <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="29"/>
                                         <color key="textColor" red="0.1877209232" green="1" blue="0.20737117920000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Cart-nav" translatesAutoresizingMaskIntoConstraints="NO" id="ul8-gg-rEq">
-                                        <rect key="frame" x="123.5" y="17.5" width="28" height="29"/>
+                                        <rect key="frame" x="124" y="17.5" width="28" height="29"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QRm-88-J40">
                                         <rect key="frame" x="35" y="22" width="23" height="22"/>
@@ -1126,15 +1121,47 @@
                                     </constraints>
                                 </view>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="feY-YM-ysf">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CartCell" id="feY-YM-ysf" customClass="CartTableViewCell" customModule="LZCoder" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="58" width="335" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="feY-YM-ysf" id="m3D-Yv-ddk">
                                             <rect key="frame" x="0.0" y="0.0" width="335" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kOA-Rh-U3f">
+                                                    <rect key="frame" x="0.0" y="10" width="161" height="23.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kcg-fQ-bWN">
+                                                    <rect key="frame" x="174" y="10" width="161" height="23.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="kOA-Rh-U3f" firstAttribute="leading" secondItem="m3D-Yv-ddk" secondAttribute="leading" id="4Vt-46-ULQ"/>
+                                                <constraint firstAttribute="trailing" secondItem="kcg-fQ-bWN" secondAttribute="trailing" id="Efr-vd-FFX"/>
+                                                <constraint firstAttribute="bottom" secondItem="kOA-Rh-U3f" secondAttribute="bottom" constant="10" id="L8D-Ip-RAc"/>
+                                                <constraint firstItem="kcg-fQ-bWN" firstAttribute="width" secondItem="m3D-Yv-ddk" secondAttribute="width" multiplier="0.48" id="SAs-uq-4I4"/>
+                                                <constraint firstItem="kOA-Rh-U3f" firstAttribute="width" secondItem="m3D-Yv-ddk" secondAttribute="width" multiplier="0.48" id="Swh-eB-iMr"/>
+                                                <constraint firstItem="kOA-Rh-U3f" firstAttribute="top" secondItem="m3D-Yv-ddk" secondAttribute="top" constant="10" id="fk8-yO-AJa"/>
+                                                <constraint firstItem="kcg-fQ-bWN" firstAttribute="top" secondItem="m3D-Yv-ddk" secondAttribute="top" constant="10" id="rlq-uI-t6m"/>
+                                                <constraint firstAttribute="bottom" secondItem="kcg-fQ-bWN" secondAttribute="bottom" constant="10" id="wwB-dE-0f2"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="lblCode" destination="kcg-fQ-bWN" id="iGo-1e-apd"/>
+                                            <outlet property="lblName" destination="kOA-Rh-U3f" id="F5o-te-E0H"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="MoR-LW-hTK" id="Ho5-gx-akV"/>
+                                    <outlet property="delegate" destination="MoR-LW-hTK" id="D5O-ol-QuR"/>
+                                </connections>
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tnl-Ne-Dca">
                                 <rect key="frame" x="0.0" y="307" width="375" height="1"/>
@@ -1329,6 +1356,9 @@
                         <viewLayoutGuide key="safeArea" id="qUO-jx-zZ2"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Cart" image="Cart-nav" id="Nbl-Dl-alb"/>
+                    <connections>
+                        <outlet property="tblCartList" destination="fYN-fM-hgU" id="C9i-X4-PjP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qAg-vz-42l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
